--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/908bab4e98.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <title>Fitness Dashboard</title>
+    <title>Weekly Workout Generator</title>
 </head>
 <body style="font-family: 'Roboto Condensed', sans-serif;" >
     <div class="container-lg" style="height: auto;border: 1px solid silver; border-radius: 10px; background-color: #FAFAFA">
         <h3 class="d-flex align-items-center" style = "height: 75px;color: rgb(24, 26, 29); margin-top: 20px; border-radius: 10px; box-shadow: rgb(255,83,73) 0px 0px 0px .25px; font-family: sans-serif; background-color: white;"><span class="p-3 material-symbols-outlined">
           fitness_center
-          </span>WEEKLY FITNESS PLANNER </h3>
+          </span>WEEKLY WORKOUT PLANNER </h3>
             <div class = "row">
                 <div class = "col-md pe-md-4" style = "background-color: white; border-radius: 10px; margin-left:20px; margin-right: 20px; margin-top: 20px;box-shadow:rgb(255,83,73) 0px 0px 0px .25px;">
                     <form>
